--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --mode=development --open --hot --progress",
-    "build": "webpack --mode=production  --progress",
-    "start": "webpack --mode=development  --progress"
+    "dev": "webpack-dev-server --config webpack.dev.js --open --hot",
+    "build": "webpack --config webpack.prod.js",
+    "start": "webpack --config webpack.dev.js"
   },
   "author": "",
   "license": "ISC",
@@ -25,10 +24,12 @@
     "babel-loader": "^9.1.3",
     "clean-webpack-plugin": "^4.0.0",
     "html-webpack-plugin": "^5.6.0",
-    "ts-loader": "9.5.1",
+    "ts-loader": "^9.5.1",
     "typescript": "^5.4.2",
     "webpack": "^5.90.3",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.3"
-  }
+    "webpack-dev-server": "^5.0.3",
+    "webpack-merge": "^5.10.0"
+  },
+  "keywords": []
 }
